--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <header>
     <!-- Bootstrap Ressourcen -->
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
