--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <li><a href="#">Kontakt</a></li>
       </ul>
     <form class="navbar-form navbar-right">
-        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#signUp">Sign Up</button>
+        <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#signUp">Registrieren</button>
         <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#login">Login</button>
       </form>
     </div><!-- /.navbar-collapse -->
@@ -72,6 +72,7 @@
             </div>
         </div> 
     </div>
+
     <footer>
     <div class="footer" id="footer">
         <div class="container">
@@ -166,11 +167,11 @@
       <div class="modal-body">
           <form action="/action_page.php">
               <div class="form-group">
-                <label for="email">Email address:</label>
+                <label for="email">E-Mail-Adresse:</label>
                 <input type="email" class="form-control" id="email">
               </div>
               <div class="form-group">
-                <label for="pwd">Password:</label>
+                <label for="pwd">Passwort:</label>
                 <input type="password" class="form-control" id="pwd">
               </div>
             </form>
@@ -196,15 +197,15 @@
       <div class="modal-body">
           <form action="/action_page.php">
               <div class="form-group">
-                <label for="email">Email address:</label>
+                <label for="email">E-Mail-Adresse:</label>
                 <input type="email" class="form-control" id="email2">
               </div>
               <div class="form-group">
-                <label for="pwd">Password:</label>
+                <label for="pwd">Passwort:</label>
                 <input type="password" class="form-control" id="pwd2">
               </div>
               <div class="checkbox">
-                <label><input type="checkbox"> Remember me</label>
+                <label><input type="checkbox"> eingeloggt bleiben</label>
               </div>
             </form>
       </div>
