--- a/tierprofil.html
+++ b/tierprofil.html
@@ -1,14 +1,16 @@
-<!doctype html>
-
-<header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>*TIERNAME*</title>
     <!-- Bootstrap Ressourcen -->
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    
+
     <!-- Selbsterstellte Ressourcen -->
     <link rel="stylesheet" href="css/style.css"/>
-</header>
+</head>
 
 <body>
         
